# marisa-trie

./: BenchmarkResults.md  HowTo.md  LibraryInterface.md  ListOfTools.md  Makefile.am  Makefile.in  ProjectHome.md  README  configure  configure.ac
bindings/: marisa-swig.i
bindings/perl/: marisa-swig.h  marisa-swig_wrap.cxx  marisa.pm
bindings/python/: marisa-swig_wrap.cxx  sample.py
bindings/ruby/: sample.rb
branches/marisa-0.0.1/: README
branches/marisa-0.0.1/tests/: Makefile.in  config-test.cc  io-test.cc  popcount-test.cc  trie-test.cc
branches/marisa-0.0.1/tools/: Makefile.in  marisa-lookup.cc  marisa-predict.cc
branches/marisa-0.1.0/: configure.ac
branches/marisa-0.1.0/tests/: c-test.c
branches/marisa-0.1.1/: README  configure.ac
branches/marisa-0.1.1/lib/: Makefile.am
branches/marisa-0.1.1/tests/: vector-test.cc
branches/marisa-0.1.2/: configure
branches/marisa-0.1.3/: configure  configure.ac
branches/marisa-0.1.5/: configure  configure.ac
branches/marisa-0.1.5/tests/: io-test.cc  trie-test.cc
branches/marisa-0.2.0/: Makefile.in
branches/marisa-0.2.0-beta/: Makefile.am  configure  configure.ac
branches/marisa-0.2.0-beta/docs/: style.css
branches/marisa-0.2.0-beta/tests/: Makefile.in  io-test.cc  marisa-test.cc
branches/marisa-0.2.0-beta/vs2008/: vs2008.sln
branches/marisa-0.2.0-beta2/docs/: readme.ja.html
branches/marisa-0.2.0-beta2/tools/: Makefile.in  marisa-benchmark.cc  marisa-build.cc
branches/marisa-0.2.0-beta3/docs/: readme.ja.html  style.css
branches/marisa-0.2.0-beta3/tools/: marisa-common-prefix-search.cc
branches/marisa-0.2.0-beta4/: README  configure  configure.ac
branches/marisa-0.2.0-beta4/tests/: Makefile.am  base-test.cc
branches/marisa-0.2.0-beta4/tools/: marisa-predictive-search.cc
branches/marisa-0.2.0-beta5/: configure  configure.ac
branches/marisa-0.2.0-beta5/docs/: readme.ja.html
branches/marisa-0.2.0-beta5/tools/: marisa-build.cc
branches/marisa-0.2.0-beta6/: configure
branches/marisa-0.2.0-beta6/docs/: readme.en.html
branches/marisa-0.2.0-beta6/tools/: marisa-benchmark.cc
branches/marisa-0.2.0-beta7/: configure.ac
branches/marisa-0.2.0-beta7/docs/: readme.en.html
branches/marisa-0.2.0-beta7/tools/: marisa-benchmark.cc  marisa-build.cc
branches/marisa-0.2.1/: README  configure  configure.ac
branches/marisa-0.2.1/lib/: Makefile.in
branches/marisa-0.2.1/tools/: Makefile.in
branches/marisa-0.2.2/: configure
branches/marisa-0.2.3/: COPYING
branches/marisa_alpha-0.1.5/: Makefile.in  README  configure  marisa_alpha.pc.in
docs/: readme.en.html  readme.ja.html  style.css
lib/: Makefile.am  Makefile.in
lib/marisa/: agent.cc  agent.h  base.h  bitvector.cc  cell.h  intvector.cc  intvector.h  io.h  keyset.h  mapper.cc  mapper.h  popcount.h  query.h  range.h  tail.cc  tail.h  trie-build.cc  trie-c.cc  trie-inline.h  trie-search.cc  trie.cc  trie.h  vector-inline.h  vector.h  writer.h
lib/marisa/grimoire/: intrin.h  (+1 more)
tests/: Makefile.am  Makefile.in  assert.h  bitvector-test.cc  c-test.c  intvector-test.cc  io-test.cc  marisa-test.cc  query-test.cc  string-test.cc  trie-test.cc  unit-test.cc  vector-test.cc
tools/: Makefile.am  Makefile.in  marisa-benchmark.cc  marisa-build.cc  marisa-dump.cc  marisa-find.cc  marisa-lookup.cc  marisa-predict.cc
trunk/: Makefile.am  Makefile.in  README  configure  configure.ac
trunk/bindings/: marisa-swig.i
trunk/bindings/perl/: marisa-swig_wrap.cxx  sample.pl
trunk/bindings/python/: marisa-swig_wrap.cxx  marisa.py  setup.py
trunk/bindings/ruby/: marisa-swig_wrap.cxx  sample.rb
trunk/docs/: readme.en.html  readme.ja.html  style.css
trunk/lib/: Makefile.am  Makefile.in  marisa.h
trunk/lib/marisa/: base.cc  base.h  bitvector.h  keyset.cc  mapper.cc  mapper.h  progress.h  rank.h  reader.cc  reader.h  tail.h  trie-build.cc  trie-c.cc  trie-inline.h  trie-search.cc  trie.cc  trie.h  vector-inline.h
trunk/lib/marisa/grimoire/: algorithm.h  intrin.h
trunk/lib/marisa/grimoire/algorithm/: sort.h
trunk/lib/marisa/grimoire/io/: mapper.cc
trunk/lib/marisa/grimoire/trie/: config.h  louds-trie.cc  louds-trie.h  tail.cc
trunk/lib/marisa/grimoire/vector/: bit-vector.cc  bit-vector.h  flat-vector.h  pop-count.h
trunk/tests/: Makefile.am  Makefile.in  base-test.cc  cell-test.cc  container-test.cc  intvector-test.cc  key-test.cc  popcount-test.cc  progress-test.cc  range-test.cc  rank-test.cc  tail-test.cc  trie-test.cc  vector-test.cc
trunk/tools/: Makefile.am  Makefile.in  marisa-benchmark.cc  marisa-build.cc  marisa-common-prefix-search.cc  marisa-lookup.cc  marisa-predictive-search.cc
trunk/vs2008/: vs2008.sln
trunk/vs2008/libmarisa/: libmarisa.vcproj
trunk/vs2008/marisa/: marisa.vcproj
trunk/vs2008/marisa-build/: marisa-build.vcproj
trunk/vs2008/marisa-lookup/: marisa-lookup.vcproj
trunk/vs2008/marisa-predict/: marisa-predict.vcproj
trunk/vs2008/marisa-predictive-search/: marisa-predictive-search.vcproj
trunk/vs2008/marisa-test/: marisa-test.vcproj
trunk/vs2008/range-test/: range-test.vcproj
trunk/vs2008/tail-test/: tail-test.vcproj
trunk/vs2008/unit-test/: unit-test.vcproj
trunk/vs2008/vector-test/: vector-test.vcproj
vs2008/: vs2008.sln
vs2008/c-test/: c-test.vcproj
vs2008/cell-test/: cell-test.vcproj
vs2008/config-test/: config-test.vcproj
vs2008/intvector-test/: intvector-test.vcproj
vs2008/io-test/: io-test.vcproj
vs2008/key-test/: key-test.vcproj
vs2008/libmarisa/: libmarisa.vcproj
vs2008/marisa-benchmark/: marisa-benchmark.vcproj
vs2008/marisa-build/: marisa-build.vcproj
vs2008/marisa-common-prefix-search/: marisa-common-prefix-search.vcproj
vs2008/marisa-find/: marisa-find.vcproj
vs2008/marisa-predictive-search/: marisa-predictive-search.vcproj
vs2008/popcount-test/: popcount-test.vcproj
vs2008/query-test/: query-test.vcproj
vs2008/rank-test/: rank-test.vcproj
vs2008/trie-test/: trie-test.vcproj
wiki/: BenchmarkResults.wiki  HowTo.wiki  LibraryInterface.wiki  ListOfTools.wiki
wiki/ja/: BenchmarkResults.wiki  HowTo.wiki  LibraryInterface.wiki  ListOfTools.wiki
(+66 files in other folders)
