SUBDIRS = lib tools tests

EXTRA_DIST = \
  bindings/Makefile \
  bindings/marisa-swig.cxx \
  bindings/marisa-swig.h \
  bindings/marisa-swig.i \
  bindings/perl/Makefile.PL \
  bindings/perl/sample.pl \
  bindings/python/sample.py \
  bindings/python/setup.py \
  bindings/ruby/extconf.rb \
  bindings/ruby/sample.rb \
  docs/*.html \
  docs/*.css \
  vs2008/vs2008.* \
  vs2008/*/*
