AM_CXXFLAGS = -Wall -Weffc++ -I../lib

TESTS = \
  base-test \
  rank-test \
  popcount-test \
  progress-test \
  string-test \
  key-test \
  range-test \
  query-test \
  cell-test \
  io-test \
  vector-test \
  intvector-test \
  bitvector-test \
  tail-test \
  trie-test

check_PROGRAMS = $(TESTS)

base_test_SOURCES = base-test.cc
base_test_LDADD = ../lib/libmarisa.a

rank_test_SOURCES = rank-test.cc
rank_test_LDADD = ../lib/libmarisa.a

popcount_test_SOURCES = popcount-test.cc
popcount_test_LDADD = ../lib/libmarisa.a

progress_test_SOURCES = progress-test.cc
progress_test_LDADD = ../lib/libmarisa.a

string_test_SOURCES = string-test.cc
string_test_LDADD = ../lib/libmarisa.a

key_test_SOURCES = key-test.cc
key_test_LDADD = ../lib/libmarisa.a

range_test_SOURCES = range-test.cc
range_test_LDADD = ../lib/libmarisa.a

query_test_SOURCES = query-test.cc
query_test_LDADD = ../lib/libmarisa.a

cell_test_SOURCES = cell-test.cc
cell_test_LDADD = ../lib/libmarisa.a

io_test_SOURCES = io-test.cc
io_test_LDADD = ../lib/libmarisa.a

vector_test_SOURCES = vector-test.cc
vector_test_LDADD = ../lib/libmarisa.a

intvector_test_SOURCES = intvector-test.cc
intvector_test_LDADD = ../lib/libmarisa.a

bitvector_test_SOURCES = bitvector-test.cc
bitvector_test_LDADD = ../lib/libmarisa.a

tail_test_SOURCES = tail-test.cc
tail_test_LDADD = ../lib/libmarisa.a

trie_test_SOURCES = trie-test.cc
trie_test_LDADD = ../lib/libmarisa.a
